sort.pancake.BasicPancake.scala.error
Compilation error:
BasicPancake:10: error: not found: value i
    retourne(i+1)
             ^